[tool.poetry]
name = "flask_tdd"
version = "0.1.0"
description = ""
authors = ["Lorena Ribeiro <59025920+lorenaribeiro93@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
blinker = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
